# openxr-renderdoc-layer

./: CMakeLists.txt  LICENSE  README.md  renderdoc-layer.json.in
api/: DefaultLayerApi.cpp
include/: Layer.h
src/: Layer.cpp
